--- a/Aula4.ipynb
+++ b/Aula4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZem0xMn10ozseTpA7oQA1",
+      "authorship_tag": "ABX9TyOr24BqyomN0h+c/JdFIKr4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,14 +51,16 @@
       "source": [
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
         "\n",
         "GOOGLE_API_KEY= 'xxxxxx'\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "VPJM7UC6iD-x"
       },
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": []
     },
     {
